--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 xcode_project: labb2.xcodeproj # path to your xcodeproj folder
-xcode_scheme: labb2Tests
+xcode_scheme: labb2
